# OpenCVNative

./: .gitignore
app/: .gitignore  CMakeLists.txt  README.md  build.gradle
app/src/androidTest/java/com/edgardeng/opencvnative/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/HeisAI/: HeisAI_Decryption_RSA.h  HeisAI_Face_Recognizer.cpp  HeisAI_Face_Recognizer.h
app/src/main/cpp/HeisAI/cryptopp/: cryptlib.vcxproj
app/src/main/java/com/edgardeng/opencvnative/: DeviceInfoActivity.java  MainActivity.java
app/src/main/res/layout/: activity_deviceinfo.xml  activity_main.xml
app/src/test/java/com/edgardeng/opencvnative/: ExampleUnitTest.java
